# WikiChat

./: .gitignore  CLAUDE.md  Makefile  PockedWiki.spec  README.md  STATUS.md  pyproject.toml
crates/: Cargo.toml
crates/pocketwiki-core/: Cargo.toml
crates/pocketwiki-core/src/: bm25.rs  lib.rs  tokenizer.rs  varint.rs
crates/pocketwiki-python/: Cargo.toml  pyproject.toml
crates/pocketwiki-python/src/: lib.rs
tests/: conftest.py
tests/fixtures/: conftest.py  sample_wiki.xml  sample_wiki.xml.bz2  tiny_wiki.xml
tests/integration/: test_end_to_end.py
tests/unit/: test_base_stage.py  test_chat_retrieval.py  test_checkpoint.py  test_cli.py  test_http_stream.py  test_llm_generator.py  test_pipeline_stages.py  test_schemas.py  test_sparse_rust.py  test_stream_parse.py  test_web_api.py  test_xml_parser.py
