[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pocketwiki-rust"
version = "0.1.0"
description = "Rust-accelerated BM25 retrieval for PocketWiki"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
module-name = "pocketwiki_rust"
